--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>NecroticSource</artifactId>
+    <artifactId>Server</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <directory>bin</directory>
